[package]
name = "redshell"
version = "0.0.7"
edition = "2021"
description = "A console-based hacking game"
license = "BSD-3-Clause"
repository = "https://github.com/nic-hartley/redshell/"

# if bumping this, be sure to edit run-tests as well!
rust-version = "1.64"

[features]
std = ["tuig/std"]
plat_ssh = ["std", "tuig/io_cli_crossterm", "tuig/run_rayon"]
plat_steam = ["std", "tuig/io_gui_softbuffer", "tuig/run_rayon"]
# plat_floppy = []
# plat_wasm = []

[dependencies]
tuig = "0.0.2"
paste = "1.0.5"
lazy_static = "1.4.0"
dashmap = "5.4.0"

[dev-dependencies]
tuig = { version = "0.0.2", features = [ "test_extras" ] }

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'
strip = true
